# SpliceAI

./: main.py  pyproject.toml
examples/: output.vcf
spliceai/: __main__.py  utils.py
